fix configuration for httpd
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/Documentation/Apache-with-public_html.conf
+++ b/Documentation/Apache-with-public_html.conf
@@ -4,7 +4,7 @@
 # You may have to change the user (web).
 
 <IfModule mod_userdir.c>
-	UserDir enabled
+	UserDir enabled web
 	UserDir public_html
 	Alias /client /home/web/public_html/Ray-Cloud-Browser/client
 	Alias /server /home/web/public_html/Ray-Cloud-Browser/server
