add javascript mime type
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/web-server-configuration/lighttpd.conf
+++ b/server/web-server-configuration/lighttpd.conf
@@ -2,17 +2,17 @@
 #
 # lighttpd -f lighttpd.conf
 
-server.document-root = "/home/seb/public_html/Ray-Cloud-Browser"
-server.port = 9999
-server.username = "seb"
-server.groupname = "seb"
-server.tag = "||||||||||||||"
-server.errorlog = "/home/seb/public_html/logs/httpd-errorlog"
-accesslog.filename = "/home/seb/public_html/logs/httpd-accesslog"
+server.document-root = "/home/web/public_html/Ray-Cloud-Browser"
+server.port = 80
+server.username = "web"
+server.groupname = "web"
+server.errorlog = "/home/web/public_html/logs/httpd-errorlog"
+accesslog.filename = "/home/web/public_html/logs/httpd-accesslog"
 index-file.names = ("index.html", "RayCloudBrowser.cgi")
 
 mimetype.assign = (
   ".html" => "text/html", 
+  ".js" => "application/javascript",
   ".txt" => "text/plain",
   ".jpg" => "image/jpeg",
   ".png" => "image/png" 
