--- a/server/web-server-configuration/lighttpd.conf
+++ b/server/web-server-configuration/lighttpd.conf
@@ -2,20 +2,31 @@
 #
 # lighttpd -f lighttpd.conf
 
-server.document-root = "/home/web/public_html/Ray-Cloud-Browser"
-server.port = 80
+##############################
+# This is a configuration for a deployment in
+#
+#    /home/web/Ray-Cloud-Browser-instance
+#
+# There are only 3 configuration options
+
 server.username = "web"
-server.groupname = "web"
-server.errorlog = "/home/web/public_html/logs/httpd-errorlog"
-accesslog.filename = "/home/web/public_html/logs/httpd-accesslog"
+server.port = 80
+var.instance = "Ray-Cloud-Browser-instance"
+
+##############################
+# Don't change anything below this line
+
+server.groupname = server.username
+var.basedir = "/home/" + server.username + "/" + var.instance +"/"
+server.document-root = var.basedir + "Ray-Cloud-Browser"
+server.pid-file = var.basedir + "pid.txt"
+server.errorlog = var.basedir + "logs/httpd-errorlog"
+accesslog.filename = var.basedir + "logs/httpd-accesslog"
 index-file.names = ("index.html", "RayCloudBrowser.cgi")
 
 mimetype.assign = (
   ".html" => "text/html", 
-  ".js" => "application/javascript",
-  ".txt" => "text/plain",
-  ".jpg" => "image/jpeg",
-  ".png" => "image/png" 
+  ".js" => "application/javascript"
 )
 
 server.modules = (
