fix a bug when there are comment lines
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,7 +3,7 @@
 # Copyright (C) 2012, 2013 Sébastien Boisvert
 
 CXX=g++
-CXXFLAGS= -O3 -Wall -march=native -pipe -std=c++98 -I. -D CONFIG_ASSERT
+CXXFLAGS= -g -O3 -Wall -march=native -pipe -std=c++98 -I. -D CONFIG_ASSERT
 RM=rm
 Q=@
 
