fix the default build options
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,8 +3,8 @@
 # Copyright (C) 2012, 2013 Sébastien Boisvert
 
 CXX=g++
-#CXXFLAGS= -g -O3 -Wall -march=native -pipe -std=c++98 -I. -D CONFIG_ASSERT
-CXXFLAGS= -g -O0 -Wall -std=c++98 -I. -D CONFIG_ASSERT
+CXXFLAGS= -O3 -Wall -march=native -pipe -std=c++98 -I. 
+#CXXFLAGS= -g -O0 -Wall -std=c++98 -I. -D CONFIG_ASSERT
 RM=rm
 Q=@
 
