--- a/server/Makefile
+++ b/server/Makefile
@@ -6,6 +6,7 @@ CXX=g++
 #CXX=clang++
 CXXFLAGS= -O3 -Wall -march=native -pipe -std=c++98 -I.
 #CXXFLAGS= -g -O0 -Wall -std=c++98 -I. -D CONFIG_ASSERT
+#CXXFLAGS= -g -O3 -Wall -std=c++98 -I. -D CONFIG_ASSERT
 RM=rm
 Q=@
 
