enable debug symbols
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -4,7 +4,7 @@
 
 CXX=g++
 #CXX=clang++
-CXXFLAGS= -O3 -Wall -march=native -pipe -std=c++98 -I.
+CXXFLAGS= -O3 -Wall -g -march=native -pipe -std=c++98 -I.
 #CXXFLAGS= -g -O0 -Wall -std=c++98 -I. -D CONFIG_ASSERT
 #CXXFLAGS= -g -O3 -Wall -std=c++98 -I. -D CONFIG_ASSERT
 RM=rm
