Client: add the possibility to choose one color per section, first iteration
Link: https://github.com/sebhtml/Ray-Cloud-Browser/issues/23
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi.1@ulaval.ca>

--- a/server/web-server-configuration/lighttpd.conf
+++ b/server/web-server-configuration/lighttpd.conf
@@ -9,8 +9,8 @@
 #
 # There are only 3 configuration options
 
-server.username = "web"
-server.port = 80
+server.username = "erdjea01"
+server.port = 10090
 var.instance = "Ray-Cloud-Browser-instance"
 
 ##############################
