disable selection for the canvas.
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/web-server-configuration/lighttpd.conf
+++ b/server/web-server-configuration/lighttpd.conf
@@ -9,8 +9,8 @@
 #
 # There are only 3 configuration options
 
-server.username = "erdjea01"
-server.port = 10090
+server.username = "boiseb01"
+server.port = 8080
 var.instance = "Ray-Cloud-Browser-instance"
 
 ##############################
@@ -25,7 +25,8 @@ accesslog.filename = var.basedir + "logs/httpd-accesslog"
 index-file.names = ("index.html", "RayCloudBrowser.cgi")
 
 mimetype.assign = (
-  ".html" => "text/html", 
+  ".html" => "text/html",
+  ".css" => "text/css",
   ".js" => "application/javascript"
 )
 
